lots of improvements

--- a/server/index.html
+++ b/server/index.html
@@ -15,6 +15,9 @@
 </head>
 <body>
 	<!-- viz -->
+	<script>
+		window.__OLAPIC_PRELOADED_STATE__ = '$__OLAPIC_PRELOADED_STATE__'
+	</script>
 	<script async defer src='bundle.js'></script>
 </body>
 </html>
