make bundle dynamic

--- a/public/test.html
+++ b/public/test.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 	<div id="olapic_specific_widget"></div>
-	<script defar async src='/loader.js' data-olapic-param="lalala"></script>
+	<script defar async src='/fcdd8ac8bd9900a108ff0c98ed703cf6/loader' data-olapic-param="lalala"></script>
 </body>
 </html>
